Fix width of download links on mobile

--- a/assets/sass/content.sass
+++ b/assets/sass/content.sass
@@ -177,3 +177,6 @@ $content-table-foot-cell-color: $text-strong !default
   font-size: 0.75em
   letter-spacing: 0.1em
   text-transform: uppercase
+
+.downloads > .buttons > .button
+  font-size: smaller
